map page styles, fix margin/overflow issue

--- a/www/style/sass/main.scss
+++ b/www/style/sass/main.scss
@@ -1,5 +1,9 @@
 @import "base";
 
+html, #root {
+	height: 100%;
+}
+
 body {
 	width: 100%;
 	height: 100%;
@@ -81,7 +85,9 @@ body {
 
 	position: relative;
 	height: 100%;
+	overflow: auto;
 	@include clearfix;
+
 	.single-page & {
 		margin: 0 5px;
 		background: $light-grey;
@@ -97,7 +103,6 @@ body {
 }
 
 .explore-nav {
-	//margin-top: 40px;
 	position: relative;
 	bottom: 13px;
 	@include box-shadow(1px 1px 3px #000);
@@ -111,22 +116,16 @@ body {
 
 
 			li {
-
-
-
 				@include column(2.4);
 				cursor: pointer;
-				//width: 100%;
 				border-left: 1px solid #333;
 				padding: 0;
 				margin: 0;
 				height: 50px;			
-				
 
 				&:hover {
 					background-color: #ddd !important;
 				}
-
 
 				&:active {
 					background-color: #ccc !important;
@@ -168,7 +167,7 @@ body {
 
 		} // -- a
 	} // -- ul
-} // -- .feed
+} // -- .explore-nav
 
 
 /* COMPONENTS --------- */
@@ -190,8 +189,6 @@ body {
 /* FEED ITEMS --------- */
 
 .feed {
-	//@include clearfix();
-	margin-bottom: 40px;
 	&>li {
 		@include clearfix();
 		font-size: 0.9em;
@@ -203,8 +200,10 @@ body {
 		@include single-box-shadow;
 		background: #fff;
 
+
 		a {
 			@include unstyled-link;	
+			font-size: 0.9em;
 		}
 
 		&:active {
@@ -555,10 +554,6 @@ body {
 	margin-bottom: 40px;
 }
 
-#panel-explore #content-view {
-
-}
-
 .push {
 	height: 40px;
 }
@@ -593,11 +588,11 @@ body {
 	@include box-sizing(border-box);
 	width: 100%;
 	height: auto;
+	max-height: 80px;
 	background: url('../../img/assets/black-trans.png');
 	color: #fff;
 	position: absolute;
-	top: 85px;
-	max-height: 100px;
+	top: 80px;
 	@include clearfix;
 
 	.infowindow-info {
@@ -607,13 +602,19 @@ body {
 		@include box-sizing(border-box);
 		font-size: 0.9em;
 		@include text-shadow(1px 1px 1px #000);
+
+		.category li {
+			@include text-shadow(none);
+			color: #000;
+		}
 	}
 
 	img {
-		width: 50px;
-		height: 50px;
-		float: left;
-		margin-right: 15px;
+		width: 40px;
+		height: 40px;
+		display: block;
+		margin: 0 auto;
+		//margin-right: 15px;
 	}
 
 	.next, .prev {
